--- a/css/main.css
+++ b/css/main.css
@@ -53,15 +53,15 @@ H3 {
 }
 
 H4 {
-	
+
 }
 
 H5 {
-	
+
 }
 
 UL LI {
-	list-style-type:none;	
+	list-style-type:none;
 }
 
 P {
@@ -87,7 +87,7 @@ img{
 
 /*---Main Style Start Here---*/
 #WrapperMain{
-	width:1003px;
+	width:auto;
 	margin:0 auto;
 }
 
@@ -196,7 +196,7 @@ img{
 .holiday_package{
 	width:206px;
 	float:left;
-	
+
 }
 
 .holiday_photo{
@@ -215,7 +215,7 @@ img{
 	list-style:none;
 	border-bottom:1px dashed #025979;
 	line-height:34px;
-}	
+}
 
 .holiday_duration ul li a{
 	font-family:Arial, Helvetica, sans-serif;
@@ -303,7 +303,7 @@ img{
 	/*height:184px;*/
 	list-style:none;
 	float:left;
-	
+
 }
 
 #FeaturedTours ul li a{
@@ -488,7 +488,7 @@ DIV#Leftfooter{
 
 DIV#Rightfooter{
 	color:#7f7f7f;
-	float:right;	
+	float:right;
 }
 
 DIV#Rightfooter a{
@@ -500,8 +500,3 @@ DIV#Rightfooter a{
 DIV#Rightfooter a:hover{
 	color:#000;
 }
-
-
-
-
-
