--- a/css/style.css
+++ b/css/style.css
@@ -590,9 +590,9 @@ DIV#Rightfooter a:hover{
 
 #WrapperMain {
 	width:auto;
-	max-width:1003px
+	max-width:800px
 }
-#wrapper {
+#Wrapper {
 	width:auto;
 	max-width:800px
 }
