--- a/css/main.css
+++ b/css/main.css
@@ -510,15 +510,15 @@ DIV#Rightfooter a:hover{
 }
 #Wrapper {
 	width:auto;
-	max-width:974px
+	max-width:auto;
 }
 #Header_area {
 	width:auto;
-	max-width:800px
+	max-width:auto;
 }
 #Navigation {
 	width:auto;
-	max-width:800px
+	max-width:auto;
 }
 #slider-wrapper {
 	width:100%;
