removed css responsive styl

--- a/css/main.css
+++ b/css/main.css
@@ -503,7 +503,7 @@ DIV#Rightfooter a:hover{
 
 
 
-/*responsive css testing*/
+/*responsive css testing
 #WrapperMain {
 	width:auto;
 	max-width:1003px
@@ -587,3 +587,4 @@ img {max-width:100%}
 	margin:auto;
 	display:block;
 }
+*/
