--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,7 @@ DIV#Rightfooter a:hover{
      SECTION 108(a)(3)).
 */
 
+/*
 #WrapperMain {
 	width:auto;
 	max-width:1003px
@@ -671,6 +672,8 @@ img {max-width:100%}
 	margin:auto;
 	display:block;
 }
+
+*/
 /*
 playback timings (ms):
   captures_list: 192.907
