--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body{
 	color:#000000;
 	margin:0 auto;
 	padding:0;
-	background:url(../images/bg.jpg) center top no-repeat;
+	background:url(../images/bg-3.svg) center top no-repeat;
 }
 
 ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input{
