--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 	color:#000000;
 	margin:0 auto;
 	padding:0;
-	background:url(/web/20160514210853im_/http://bluemaxholidays.com/images/bg.jpg) center top no-repeat;
+	background:url(/web/20160514210853im_/http://bluemaxholidays.com/images/bg-3.svg) center top no-repeat;
 }
 
 ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input{
